css fixes and spacing

--- a/word_game/src/App.css
+++ b/word_game/src/App.css
@@ -1,9 +1,4 @@
-.pointer{
-  cursor: pointer;
-}
-.noMargin{
-  margin: 0;
-}
+
 .topNav{
   z-index: 1;
   position: fixed;
@@ -53,8 +48,20 @@
 .mainHover:hover{
   color: blue;
 }
+.pointer{
+  cursor: pointer;
+}
+.noMargin{
+  margin: 0;
+}
 /* END BASE CLASSES */
 
+
+.fullPageContainer{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 
 
@@ -96,7 +103,7 @@
   margin:0 auto;
 }
 #GameOverview{
-  padding: 0.5rem 0;
+  padding: 3rem 0;
   margin: 0 auto;
 }
 .maxWidth60{
